# langsmith-simple

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  TECH_STACK.md  pyproject.toml
backend/: alembic.ini  pyproject.toml
backend/langsmith_simple/: config.py  database.py  main.py  redis_client.py
backend/langsmith_simple/deployment/: local_manager.py
backend/langsmith_simple/models/: __init__.py  deployment.py  feedback.py  project.py  run.py  workspace.py
backend/langsmith_simple/routers/: deployments.py  playground.py  projects.py  runs.py  stream.py
backend/langsmith_simple/schemas/: __init__.py  deployment.py  playground.py  project.py  run.py
backend/langsmith_simple/services/: deployment_service.py
backend/migrations/: env.py
backend/migrations/versions/: 481ea6b5b45d_initial.py
backend/tests/: conftest.py  test_deployments.py  test_projects.py  test_runs.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/layout/: AppLayout.tsx
frontend/src/pages/: DeploymentsPage.tsx  PlaygroundPage.tsx  TraceDetailPage.tsx  TraceListPage.tsx
infra/: docker-compose.yml
sdk/python/: pyproject.toml
sdk/python/langsmith_simple_sdk/: __init__.py  client.py  run_tree.py  traceable.py
sdk/python/tests/: test_client.py  test_traceable.py
