[project]
name = "langsmith-simple"
version = "0.1.0"
description = "Simplified LangSmith - Trace visualization, Playground, and Deployments"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.4",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2,<3",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.0",
    "orjson>=3.10.0",
    "httpx>=0.27.0",
    "zstandard>=0.23.0",
    "xxhash>=3.0.0",
    "uuid-utils>=0.12.0,<1.0",
    "requests-toolbelt>=1.0.0",
    "packaging>=23.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langsmith_simple"]
